--- a/.ci/.semgrep-service-name0.yml
+++ b/.ci/.semgrep-service-name0.yml
@@ -1683,6 +1683,64 @@ rules:
           patterns:
             - pattern-regex: "(?i)Chime"
     severity: WARNING
+  - id: chimesdkmediapipelines-in-func-name
+    languages:
+      - go
+    message: Do not use "ChimeSDKMediaPipelines" in func name inside chimesdkmediapipelines package
+    paths:
+      include:
+        - internal/service/chimesdkmediapipelines
+    patterns:
+      - pattern: func $NAME( ... ) { ... }
+      - metavariable-pattern:
+          metavariable: $NAME
+          patterns:
+            - pattern-regex: "(?i)ChimeSDKMediaPipelines"
+            - pattern-not-regex: ^TestAcc.*
+    severity: WARNING
+  - id: chimesdkmediapipelines-in-test-name
+    languages:
+      - go
+    message: Include "ChimeSDKMediaPipelines" in test name
+    paths:
+      include:
+        - internal/service/chimesdkmediapipelines/*_test.go
+    patterns:
+      - pattern: func $NAME( ... ) { ... }
+      - metavariable-pattern:
+          metavariable: $NAME
+          patterns:
+            - pattern-not-regex: "^TestAccChimeSDKMediaPipelines"
+            - pattern-regex: ^TestAcc.*
+    severity: WARNING
+  - id: chimesdkmediapipelines-in-const-name
+    languages:
+      - go
+    message: Do not use "ChimeSDKMediaPipelines" in const name inside chimesdkmediapipelines package
+    paths:
+      include:
+        - internal/service/chimesdkmediapipelines
+    patterns:
+      - pattern: const $NAME = ...
+      - metavariable-pattern:
+          metavariable: $NAME
+          patterns:
+            - pattern-regex: "(?i)ChimeSDKMediaPipelines"
+    severity: WARNING
+  - id: chimesdkmediapipelines-in-var-name
+    languages:
+      - go
+    message: Do not use "ChimeSDKMediaPipelines" in var name inside chimesdkmediapipelines package
+    paths:
+      include:
+        - internal/service/chimesdkmediapipelines
+    patterns:
+      - pattern: var $NAME = ...
+      - metavariable-pattern:
+          metavariable: $NAME
+          patterns:
+            - pattern-regex: "(?i)ChimeSDKMediaPipelines"
+    severity: WARNING
   - id: cloud9-in-func-name
     languages:
       - go
@@ -3245,48 +3303,4 @@ rules:
           patterns:
             - pattern-not-regex: "^TestAccConfigService"
             - pattern-regex: ^TestAcc.*
-    severity: WARNING
-  - id: configservice-in-const-name
-    languages:
-      - go
-    message: Do not use "ConfigService" in const name inside configservice package
-    paths:
-      include:
-        - internal/service/configservice
-    patterns:
-      - pattern: const $NAME = ...
-      - metavariable-pattern:
-          metavariable: $NAME
-          patterns:
-            - pattern-regex: "(?i)ConfigService"
-    severity: WARNING
-  - id: configservice-in-var-name
-    languages:
-      - go
-    message: Do not use "ConfigService" in var name inside configservice package
-    paths:
-      include:
-        - internal/service/configservice
-    patterns:
-      - pattern: var $NAME = ...
-      - metavariable-pattern:
-          metavariable: $NAME
-          patterns:
-            - pattern-regex: "(?i)ConfigService"
-    severity: WARNING
-  - id: connect-in-func-name
-    languages:
-      - go
-    message: Do not use "Connect" in func name inside connect package
-    paths:
-      include:
-        - internal/service/connect
-    patterns:
-      - pattern: func $NAME( ... ) { ... }
-      - metavariable-pattern:
-          metavariable: $NAME
-          patterns:
-            - pattern-regex: "(?i)Connect"
-            - pattern-not-regex: .*uickConnect.*
-            - pattern-not-regex: ^TestAcc.*
     severity: WARNING
