--- a/.ci/.semgrep-service-name0.yml
+++ b/.ci/.semgrep-service-name0.yml
@@ -1741,6 +1741,64 @@ rules:
           patterns:
             - pattern-regex: "(?i)ChimeSDKMediaPipelines"
     severity: WARNING
+  - id: chimesdkvoice-in-func-name
+    languages:
+      - go
+    message: Do not use "ChimeSDKVoice" in func name inside chimesdkvoice package
+    paths:
+      include:
+        - internal/service/chimesdkvoice
+    patterns:
+      - pattern: func $NAME( ... ) { ... }
+      - metavariable-pattern:
+          metavariable: $NAME
+          patterns:
+            - pattern-regex: "(?i)ChimeSDKVoice"
+            - pattern-not-regex: ^TestAcc.*
+    severity: WARNING
+  - id: chimesdkvoice-in-test-name
+    languages:
+      - go
+    message: Include "ChimeSDKVoice" in test name
+    paths:
+      include:
+        - internal/service/chimesdkvoice/*_test.go
+    patterns:
+      - pattern: func $NAME( ... ) { ... }
+      - metavariable-pattern:
+          metavariable: $NAME
+          patterns:
+            - pattern-not-regex: "^TestAccChimeSDKVoice"
+            - pattern-regex: ^TestAcc.*
+    severity: WARNING
+  - id: chimesdkvoice-in-const-name
+    languages:
+      - go
+    message: Do not use "ChimeSDKVoice" in const name inside chimesdkvoice package
+    paths:
+      include:
+        - internal/service/chimesdkvoice
+    patterns:
+      - pattern: const $NAME = ...
+      - metavariable-pattern:
+          metavariable: $NAME
+          patterns:
+            - pattern-regex: "(?i)ChimeSDKVoice"
+    severity: WARNING
+  - id: chimesdkvoice-in-var-name
+    languages:
+      - go
+    message: Do not use "ChimeSDKVoice" in var name inside chimesdkvoice package
+    paths:
+      include:
+        - internal/service/chimesdkvoice
+    patterns:
+      - pattern: var $NAME = ...
+      - metavariable-pattern:
+          metavariable: $NAME
+          patterns:
+            - pattern-regex: "(?i)ChimeSDKVoice"
+    severity: WARNING
   - id: cloud9-in-func-name
     languages:
       - go
@@ -3317,34 +3375,4 @@ rules:
           metavariable: $NAME
           patterns:
             - pattern-regex: "(?i)ConfigService"
-    severity: WARNING
-  - id: configservice-in-var-name
-    languages:
-      - go
-    message: Do not use "ConfigService" in var name inside configservice package
-    paths:
-      include:
-        - internal/service/configservice
-    patterns:
-      - pattern: var $NAME = ...
-      - metavariable-pattern:
-          metavariable: $NAME
-          patterns:
-            - pattern-regex: "(?i)ConfigService"
-    severity: WARNING
-  - id: connect-in-func-name
-    languages:
-      - go
-    message: Do not use "Connect" in func name inside connect package
-    paths:
-      include:
-        - internal/service/connect
-    patterns:
-      - pattern: func $NAME( ... ) { ... }
-      - metavariable-pattern:
-          metavariable: $NAME
-          patterns:
-            - pattern-regex: "(?i)Connect"
-            - pattern-not-regex: .*uickConnect.*
-            - pattern-not-regex: ^TestAcc.*
     severity: WARNING
