--- a/.github/workflows/project-partner-label.yml
+++ b/.github/workflows/project-partner-label.yml
@@ -16,7 +16,7 @@ jobs:
           PROJCOLUMNS=$(gh api graphql -f query='
               query {
                 repository(name: "${{ github.event.repository.name }}", owner: "${{ github.repository_owner }}") {
-                  issue(number: ${{ github.event.issue.number }}) {
+                  pullRequest(number: ${{ github.event.number }}) {
                   projectCards {
                     nodes {
                       column {
@@ -28,11 +28,11 @@ jobs:
                 }
               }
             }')
-          INPROJECT=$(echo $PROJCOLUMNS | jq '.data.repository.issue.projectCards.nodes[].column | select(.id=="${{ env.DESTINATION_COLUMN_ID }}")')
+          INPROJECT=$(echo $PROJCOLUMNS | jq '.data.repository.pullRequest.projectCards.nodes[].column | select(.id=="${{ env.DESTINATION_COLUMN_ID }}")')
           if [ -z "$INPROJECT" ];
           then
             gh api graphql -f query='mutation {
-              addProjectCard(input: {projectColumnId: "${{ env.DESTINATION_COLUMN_ID }}", contentId: "${{ github.event.issue.node_id }}"}) {
+              addProjectCard(input: {projectColumnId: "${{ env.DESTINATION_COLUMN_ID }}", contentId: "${{ github.event.pull_request.node_id }}"}) {
                 clientMutationId
               }
             }'
